--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Perfecta</title>
+  <title>TrigguiApp – Perfecta y Fluida</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -13,7 +12,7 @@
       width: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
-      overflow: hidden;
+      /* No overflow:hidden → permite swipe-down refresh */
     }
     .grid {
       position: absolute;
@@ -32,10 +31,11 @@
       color: white;
       text-align: center;
       position: relative;
-      overflow: hidden;
       font-size: 1.1rem;
       background-size: 200% 200%;
       animation: fadeIn 1s ease forwards;
+      cursor: pointer;
+      flex-direction: column;
     }
     .label {
       z-index: 1;
@@ -57,16 +57,14 @@
     }
     .portada {
       animation: glow 6s ease-in-out infinite;
+      flex-direction: column;
+      gap: 1rem;
     }
     .portada img {
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 85%;
+      max-height: 75%;
       border-radius: 16px;
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
-    }
-    .btn {
-      flex-direction: column;
-      gap: 0.5rem;
     }
     .btn button {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
@@ -78,10 +76,12 @@
       font-weight: bold;
       cursor: pointer;
       animation: pulse 2s infinite;
+      margin-top: 1rem;
     }
     .contador {
       font-size: 0.9rem;
       color: #ffeb3b;
+      margin-top: 0.6rem;
     }
 
     @keyframes fadeIn {
@@ -104,9 +104,10 @@
   <script>
     const grid = document.getElementById("gridContainer");
     const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
-    let revelado = false;
     let libro = null;
-    let portadaBloque = Math.floor(Math.random() * 4);
+    let portadaBloque = 0;
+    let clics = 0;
+    let revelado = false;
 
     function generarGradiente(hex) {
       const r = parseInt(hex.slice(1,3), 16);
@@ -153,6 +154,7 @@
         const contador = document.createElement("div");
         contador.className = "contador";
         contador.innerText = "✨ Cargando...";
+        btnWrap.appendChild(contador);
 
         btn.onclick = async () => {
           btn.style.display = "none";
@@ -166,26 +168,39 @@
           }
         };
 
-        b.append(label, frase, portada, btnWrap, contador);
+        b.append(label, frase, portada, btnWrap);
         b.onclick = () => manejarClick(b);
         grid.appendChild(b);
       });
     }
 
     function manejarClick(bloque) {
-      if (revelado) return location.reload();
       const i = parseInt(bloque.dataset.index);
       const children = bloque.children;
 
+      if (revelado) return location.reload();
+
       if (i === portadaBloque) {
+        // mostrar portada + botón
         [...children].forEach(c => c.style.display = "none");
         children[2].style.display = "flex"; // portada
-        children[3].style.display = "flex"; // botón
+        children[3].style.display = "flex"; // btnWrap
+
+        // mostrar frases que falten
+        const all = [...grid.children];
+        all.forEach((blk, j) => {
+          if (j !== i) {
+            blk.children[0].style.display = "none"; // label
+            blk.children[1].style.display = "flex"; // frase
+          }
+        });
+
+        revelado = true;
       } else {
-        [...children].forEach(c => c.style.display = "none");
-        children[1].style.display = "flex"; // frase
+        bloque.children[0].style.display = "none"; // label
+        bloque.children[1].style.display = "flex"; // frase
+        clics++;
       }
-      revelado = true;
     }
 
     async function iniciar() {
